GNOME Bugzilla – Bug 703096
Fixes identifier used to grab gactionentry select-subtitle
Last modified: 2013-07-01 16:34:57 UTC
Created attachment 247792 [details] [review] Fixes identifier used to grab gactionentry select-subtitle Fixes: (totem:19871): GLib-GIO-CRITICAL **: g_simple_action_set_enabled: assertion 'G_IS_SIMPLE_ACTION (simple)' failed
Review of attachment 247792 [details] [review]: ++
sorry I cannot commit. Thanks for the review.