main: Make "Select Subtitle" work

Fixes identifier used to grab GActionEntry select-subtitle

(totem:19871): GLib-GIO-CRITICAL **: g_simple_action_set_enabled: assertion 'G_IS_SIMPLE_ACTION (simple)' failed

https://bugzilla.gnome.org/show_bug.cgi?id=703096